# gtg

./: .bzrignore  .gitignore  .swp  .travis.yml  AUTHORS  CHANGELOG  CONTRIBUTING.md  HACKING  MANIFEST.in  Makefile  NEWS  README  README.Debian  README.md  bert.xml  bugfix_1000.py  changelog  changelog.intrepid  circle.yml  codecheck.sh  config.xml  control  control.intrepid  control.jaunty  copyright  data.xml  datastore.py  debug.sh  drawing.py  firstrun_tasks.xml  gantt_prototype.py  generate_potfile.sh  gtcli  gtcli_bash_completion  gtd-gnome.glade  gtg  gtg.appdata.xml  gtg.desktop  gtg.py  gtg.sh  (+36 more)
GTG/: __init__.py  cscope.files  cscope.out  gtcli  gtg  gtg.in  gtg.py  gtg_new_task  info.py  meson.build
GTG/backends/: __init__.py  backend_bugzilla.py  backend_caldav.py  backend_evolution.py  backend_gnote.py  backend_gtgonline.py  backend_identica.py  backend_launchpad.py  backend_localfile.py  backend_mantis.py  backend_openerp.py  backend_rtm.py  backend_rtm.py~  backend_signals.py  backend_tomboy.py  backend_twitter.py  backendsignals.py  generic_backend.py  genericbackend.py  generictomboy.py  localfile.py  meson.build  periodic_import_backend.py  periodicimportbackend.py  sync_engine.py  syncengine.py  twitter.py
GTG/backends/bugzilla/: TODO  __init__.py  bug.py  bugzilla.py  exceptions.py  notification.py  services.py
GTG/backends/openerplib/: main.py
GTG/backends/rtm/: rtm.py
GTG/backends/tweepy/: oauth.py
GTG/backends/unmaintained/: README.txt  backend_evolution.py  backend_gnote.py  backend_launchpad.py  backend_mantis.py  backend_rtm.py  backend_tomboy.py  generictomboy.py
GTG/core/: __init__.py  base_store.py  borg.py  cleanxml.py  clipboard.py  config.py  datastore.py  datastore2.py  dates.py  dbuswrapper.py  dirs.py  filteredtree.py  filters.py  filters_bank.py  firstrun_tasks.py  gtg_tags.py  info.py  info.py.in  info.pyi  keyring.py  logger.py  logging.py  manager.py  meson.build  networkmanager.py  repeating.py  requester.py  requester.py~  saved_searches.py  search.py  sorters.py  system_info.py  tag.py  tags.py  tags2.py  tagstore.py  task.py  task_tree_model.py  tasks.py  tasks2.py  (+10 more)
GTG/core/dbus/: dbus.py  tasks.py
GTG/core/old/: filteredtree.py  filters_bank.py
GTG/core/plugins/: __init__.py  api.py  engine.py  manager.py  pluginmanager.glade
GTG/gtg_core/: task.py
GTG/gtk/: __init__.py  action_row.py  application.py  backends_dialog.glade  backends_dialog.ui  colors.py  crashhandler.py  dbus.py  dbuswrapper.py  delete_dialog.py  deletion.glade  deletion.ui  errorhandler.py  general_preferences.py  help.py  manager.py  meson.build  plugins.glade  plugins.py  plugins.ui  preferences.glade  preferences.py  preferences.ui  tag_completion.py
GTG/gtk/backends/: __init__.py  addpanel.py  backendscombo.py  backendstree.py  configurepanel.py
GTG/gtk/backends_dialog/: __init__.py  addpanel.py  backendscombo.py  backendstree.py  configurepanel.py
GTG/gtk/browser/: CellRendererTags.py  __init__.py  adaptive_button.py  backend_infobar.py  browser.py  browser.py~  cell_renderer_tags.py  delete_tag.py  (+24 more)
GTG/plugins/: __init__.py  bugzilla.gtg-plugin  calendar_view.gtg-plugin  dev_console.gtg-plugin  dev_console.gtg-plugin.desktop  evolution-sync.gtg-plugin  export.gtg-plugin  export.gtg-plugin.desktop  gamify.gtg-plugin  gamify.gtg-plugin.desktop  geolocalized-tasks.gtg-plugin  hamster.gtg-plugin  hamster.gtg-plugin.desktop  helloworld.gtg-plugin  import-json.gtg-plugin  import_json.gtg-plugin  meson.build  new_test.py  not-today.gtg-plugin  notification-area.gtg-plugin  rtm-sync.gtg-plugin  send-email.gtg-plugin  send-email.gtg-plugin.desktop  task-reaper.gtg-plugin  teste.py  tomboy.gtg-plugin  untouched-tasks.gtg-plugin  untouched-tasks.gtg-plugin.desktop  urgency-coding.gtg-plugin  urgency-color.gtg-plugin  urgency-color.gtg-plugin.desktop
GTG/taskbrowser/: CellRendererTags.py  __init__.py  browser.py  browser_tools.py  browsertools.py  filtertree.py  gtd-gnome.glade  preferences.py  tag_model.py  tagtree.py  taskbrowser.glade  tasktree.py  treetools.py
GTG/taskeditor/: __init__.py  editor.py  taskeditor.glade  taskview.py  taskviewserial.py
GTG/tests/: __init__.py  backends.py  signals_testing.py  test_apidocs.py  test_backend_bugzilla.py  test_backend_tomboy.py  test_backends.py  test_bidict.py  test_datastore.py  test_dates.py  test_extract_tags.py  test_filteredtree.py  test_interruptible.py  test_liblarch.py  test_networkmanager.py  test_search_filter.py  test_search_query.py  test_signal_testing.py  test_sorted_dict.py  test_syncengine.py  test_syncmeme.py  test_tag.py  test_tagstore.py  test_taskviewserial.py  test_tool_tags.py  test_tools_tags.py  test_tree.py  test_twokeydict.py  test_urlregex.py  tree_testing.py  unit.sh
GTG/tools/: __init__.py  autostart.py  bidict.py  borg.py  cleanxml.py  clipboard.py  colors.py  dates.py  gtkcrashhandler.py  import_liblarch.py  interruptible.py  keyring.py  listes.py  logger.py  networkmanager.py  openurl.py  readurl.py  shortcut.py  sorted_dict.py  synchronized.py  tags.py  taskxml.py  testingmode.py  timer.py  twokeydict.py  urlregex.py  watchdog.py
GTG/viewmanager/: __init__.py  dbuswrapper.py  delete_dialog.py  deletion.glade  manager.py  preferences.glade  preferences.py
data/: firstrun_tasks.xml  gtg.css  gtg.desktop  meson.build  org.gnome.GTG.appdata.xml.in  org.gnome.GTG.appdata.xml.in.in  org.gnome.GTG.desktop  org.gnome.GTG.desktop.in  org.gnome.GTG.desktop.in.in  org.gnome.GTG.metainfo.xml.in.in  org.gnome.GTG.service  org.gnome.GTG.service.in
data/dbus/: meson.build  org.gnome.GTG.Tasks.xml
data/icons/: meson.build
data/schema/: _elements.xsd  _types.xsd  data.xsd  projects.xsd  tags.xsd  tasks.xsd
docs/user_manual/: meson.build
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  gtg-be.po  gtg-es.po  gtg-gl.po  gtg-pl.po  gtg-zh_CN.po  gtg.pot  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  jbo.po  ka.po  (+27 more)
(+647 files in other folders)
