gtg_plugin_sources = [
  '__init__.py',
  'export.gtg-plugin',
  'send-email.gtg-plugin',
  'untouched-tasks.gtg-plugin',
  'urgency-color.gtg-plugin',
]

python3.install_sources(gtg_plugin_sources, subdir: 'GTG' / 'plugins')
subdir('export')
subdir('send_email')
subdir('untouched_tasks')
subdir('urgency_color')
