gnome.yelp('gtg',
  sources: [
    'gtg-add-sync.page',
    'gtg-add-tag.page',
    'gtg-create-new-task.page',
    'gtg-create-plugin.page',
    'gtg-create-sync.page',
    'gtg-credits-design.page',
    'gtg-credits-dev.page',
    'gtg-credits-trans.page',
    'gtg-delete-task.page',
    'gtg-dismiss-task.page',
    'gtg-edit-task.page',
    'gtg-faq.page',
    'gtg-join-developers.page',
    'gtg-join-users.page',
    'gtg-main-window.page',
    'gtg-plugins.page',
    'gtg-ppa.page',
    'gtg-quickadd-dates.page',
    'gtg-quickadd-new-task.page',
    'gtg-quickadd.page',
    'gtg-quickstart.page',
    'gtg-report-problem.page',
    'gtg-search-intro.page',
    'gtg-search-syntax.page',
    'gtg-set-task-date.page',
    'gtg-shortcut-keys.page',
    'gtg-subtasks.page',
    'gtg-sync.page',
    'gtg-tag-color.page',
    'gtg-tags.page',
    'gtg-tasks.page',
    'gtg-translate.page',
    'gtg-workview.page',
    'index.page',
    'legal.xml',
  ],
  media: [
    'figures/configure-sync.png',
    'figures/edit_tag.png',
    'figures/edit_task.png',
    'figures/get_started.png',
    'figures/gtg-icon.png',
    'figures/gtg-screenshot.png',
    'figures/modify-tag.png',
    'figures/mover1.png',
    'figures/mover2.png',
    'figures/mover3.png',
    'figures/mover4.png',
    'figures/plugins.png',
    'figures/quick_tag_entry.png',
    'figures/select-sync.png',
    'figures/select_sync_service.png',
    'figures/set_date_task_browser.png',
    'figures/set_date_task_open.png',
    'figures/subtasks2.png',
    'figures/subtasks.png',
    'figures/tag.png',
    'figures/task-management.png',
    'figures/tasks.png',
    'figures/Understand-GTG-main-window.png',
    'figures/workview.png',
    'videos/GetStarted.ogg',
    'videos/quick-add2.webm',
  ]
)

