gnome.yelp('gtg',
  sources: [
    'gtg-add-tag.page',
    'gtg-create-new-task.page',
    'gtg-complete-delete-dismiss-task.page',
    'gtg-date-parsing.page',
    'gtg-developer-resources.page',
    'gtg-edit-task.page',
    'gtg-faq.page',
    'gtg-main-window.page',
    'gtg-plugins.page',
    'gtg-preferences.page',
    'gtg-quickadd.page',
    'gtg-search-intro.page',
    'gtg-search-syntax.page',
    'gtg-set-task-date.page',
    'gtg-shortcut-keys.page',
    'gtg-subtasks.page',
    'gtg-tag-color.page',
    'gtg-tags.page',
    'gtg-taskview.page',
    'index.page',
    'legal.xml',
  ],
  media: [
    'figures/add-tag.png',
    'figures/edit_tag.png',
    'figures/gtg-icon.png',
    'figures/insert_subtask_icon.png',
    'figures/main_window.png',
    'figures/modify-tag.png',
    'figures/quick_tag_entry.png',
    'figures/search-icon.png',
    'figures/set_date_task_browser.png',
    'figures/set_date_task_open.png',
    'figures/subtasks.png',
    'figures/tag.png',
    'figures/task-toolbar-menu.png',
    'figures/workview.png',
  ]
)

