gtg_plugin_export_sources = [
  '__init__.py',
  'export.py',
  'export.ui',
  'task_str.py',
  'templates.py',
]

gtg_plugin_export_template_sources = [
  'export_templates/description_pocketmod.py',
  'export_templates/description_sexy.py',
  'export_templates/description_simple.py',
  'export_templates/description_statusrpt.py',
  'export_templates/description_textual.py',
  'export_templates/graphics_pocketmod.svg',
  'export_templates/script_pocketmod',
  'export_templates/template_pocketmod.tex',
  'export_templates/template_sexy.html',
  'export_templates/template_simple.html',
  'export_templates/template_statusrpt.txt',
  'export_templates/template_textual.txt',
  'export_templates/thumbnail_pocketmod.png',
  'export_templates/thumbnail_sexy.png',
  'export_templates/thumbnail_simple.png',
  'export_templates/thumbnail_statusrpt.png',
  'export_templates/thumbnail_textual.png',
]

python3.install_sources(gtg_plugin_export_sources, subdir: 'GTG' / 'plugins' / 'export')
python3.install_sources(gtg_plugin_export_template_sources, subdir: 'GTG' / 'plugins' / 'export' / 'export_templates')
